Copyright GRAME (c) 2009,2010,2011

----------------------------------------------------
Version 0.70
- support for multiple scenes (scene 'new', 'del' and 'foreground' messages)
- 'load' message supported at scene level.
- get 'watch' implemented
- interaction variables extension: new $scene variable in the address field
- support 'watch' message without argument to clear all the watched events

----------------------------------------------------
Version 0.64
- drag and drop support in INScore viewer
- interaction variables extension:
  $sx, $sy variables added to support scene coordinate space
  automatic range mapping for $x, $y variables
  new $self variable in the address field

----------------------------------------------------
Version 0.63
- new 'mousemove' event
- interaction messages accept variables ($x, $y, $date...)
- new 'svg' and 'svgf' types for svg components
- set line message change: the x y form is deprecated, it is replaced by
  the following forms:
  'xy' x y equivalent to the former form
  'wa' width angle 

----------------------------------------------------
Version 0.62
- utf8 support on windows corrected
- transparency support for stretched synchronized objects corrected
- new 'effect' message

----------------------------------------------------
Version 0.61
- multiple application instances supported with dynamic udp port number allocation
- command line option with --port portnumber option to set the receive udp port number at startup

----------------------------------------------------
Version 0.60 - July 7 2010
- new xorigin and yorigin messages
- new interaction messages set
- alpha channel handled by images and video
- bug correction in line creation corrected (false incorrect parameter returned)
- bug correction in line 'get' message handling
- memory leak correction (messages not deleted)

known issues: 
- incorrect graphic rendering when sync 'a to b' is changed to 'b to a' in the same update loop
