@@ -14,10 +14,11 @@ Version 0.70
 - get 'watch' implemented
 - interaction variables extension: new $scene variable in the address field
 - support 'watch' message without argument to clear all the watched events
+- drag and drop supports any file in INScore viewer
 
 ----------------------------------------------------
 Version 0.64
-- drag and drop support in INScore viewer
+- drag and drop inscore files support in INScore viewer
 - interaction variables extension:
   $sx, $sy variables added to support scene coordinate space
   automatic range mapping for $x, $y variables
